--- a/.github/workflows/ledger-ci.yaml
+++ b/.github/workflows/ledger-ci.yaml
@@ -23,8 +23,17 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
+      - name: Build and Run SpotBugs
         run: mvn -B clean install -DskipTests --file ledger-service/pom.xml
+
+      - name: Upload SpotBugs Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: spotbugs-report
+          path: target/spotbugs.html
+
+      - name: Run Unit Tests
+        run: mvn -B test --file ledger-service/pom.xml
 
       - name: Run Unit Tests
         run: mvn -B test --file ledger-service/pom.xml
