--- a/ledger-service/pom.xml
+++ b/ledger-service/pom.xml
@@ -205,7 +205,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<phase>clean</phase>
 						<goals>
 							<goal>check</goal>
 						</goals>
