--- a/.github/workflows/transfer-ci.yaml
+++ b/.github/workflows/transfer-ci.yaml
@@ -1,4 +1,4 @@
-name: Ledger Service CI
+name: Transfer Service CI
 
 on:
   push:
@@ -23,8 +23,14 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
+      - name: Build and Run SpotBugs
         run: mvn -B clean install -DskipTests --file transfer-service/pom.xml
+
+      - name: Upload SpotBugs Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: spotbugs-report
+          path: target/spotbugs.html
 
       - name: Run Unit Tests
         run: mvn -B test --file transfer-service/pom.xml
