--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       SPRING_DATASOURCE_USERNAME: ledger_user
       SPRING_DATASOURCE_PASSWORD: password321
       SPRING_REDIS_HOST: redis
-      SPRING_PROFILES_ACTIVE: sit
+      SPRING_PROFILES_ACTIVE: dev
     ports:
       - "8081:8080"
 
@@ -35,7 +35,7 @@ services:
       SPRING_DATASOURCE_USERNAME: transfer_user
       SPRING_DATASOURCE_PASSWORD: password321
       SPRING_REDIS_HOST: redis
-      SPRING_PROFILES_ACTIVE: sit
+      SPRING_PROFILES_ACTIVE: dev
     depends_on:
       redis:
         condition: service_started
