--- a/ledger-service/src/main/resources/application-dev.yaml
+++ b/ledger-service/src/main/resources/application-dev.yaml
@@ -26,9 +26,9 @@ management:
 
 springdoc:
   swagger-ui:
-    enabled: false
+    enabled: true
   api-docs:
-    enabled: false
+    enabled: true
 
 server:
   port: 8081
