--- a/transfer-service/src/main/resources/application-dev.yaml
+++ b/transfer-service/src/main/resources/application-dev.yaml
@@ -33,9 +33,9 @@ server:
 
 springdoc:
   swagger-ui:
-    enabled: false
+    enabled: true
   api-docs:
-    enabled: false
+    enabled: true
 
 ledger:
   service:
