--- a/transfer-service/src/main/resources/application.yaml
+++ b/transfer-service/src/main/resources/application.yaml
@@ -40,9 +40,9 @@ server:
 
 springdoc:
   swagger-ui:
-    enabled: true
+    enabled: false
   api-docs:
-    enabled: true
+    enabled: false
 
 ledger:
   service:
