--- a/.github/workflows/ledger-ci.yaml
+++ b/.github/workflows/ledger-ci.yaml
@@ -23,14 +23,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build and Run SpotBugs
+      - name: Build Project
         run: mvn -B clean install -DskipTests --file ledger-service/pom.xml
-
-      - name: Upload SpotBugs Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: spotbugs-report
-          path: target/spotbugs.html
 
       - name: Run Unit Tests
         run: mvn -B test --file ledger-service/pom.xml
