--- a/transfer-service/src/main/resources/application-dev.yaml
+++ b/transfer-service/src/main/resources/application-dev.yaml
@@ -2,22 +2,23 @@ spring:
   application:
     name: transfer-service
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:transfer_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: user
-    password: pwd123
-  h2:
-    console:
-      enabled: true
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5433/transfer_db
+    username: transfer_user
+    password: password321
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+      format_sql: true
+  jackson:
+    default-property-inclusion: NON_EMPTY
   data:
     redis:
       host: localhost
       port: 6379
+
 management:
   endpoints:
     web:
@@ -33,9 +34,9 @@ server:
 
 springdoc:
   swagger-ui:
-    enabled: true
+    enabled: ${SWAGGER_ENABLED:false}
   api-docs:
-    enabled: true
+    enabled: ${SWAGGER_ENABLED:false}
 
 ledger:
   service:
