--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,12 @@ services:
     ports:
       - "6379:6379"
     command: ["redis-server", "--appendonly", "yes"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   transfer-pg-db:
     image: postgres:15
@@ -18,6 +24,12 @@ services:
       POSTGRES_PASSWORD: password321
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U transfer_user"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     volumes:
       - transfer-pgdata:/var/lib/postgresql/data
 
@@ -30,6 +42,12 @@ services:
       POSTGRES_PASSWORD: password456
     ports:
       - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ledger_user"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     volumes:
       - ledger-pgdata:/var/lib/postgresql/data
 
@@ -40,15 +58,15 @@ services:
     container_name: ledger-service
     restart: always
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://ledger-pg-db:5432/ledger_db
-      SPRING_DATASOURCE_USERNAME: ledger_user
-      SPRING_DATASOURCE_PASSWORD: password456
-      SPRING_REDIS_HOST: redis
+      LEDGER_DB_URL: jdbc:postgresql://ledger-pg-db:5432/ledger_db
+      LEDGER_DB_USER: ledger_user
+      LEDGER_DB_PWD: password456
       SPRING_PROFILES_ACTIVE: dev
       SERVER_PORT: 8081
       SWAGGER_ENABLED: "true"
     depends_on:
-      - ledger-pg-db
+      ledger-pg-db:
+        condition: service_healthy
     ports:
       - "8081:8081"
 
@@ -59,17 +77,18 @@ services:
     container_name: transfer-service
     restart: always
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://transfer-pg-db:5432/transfer_db
-      SPRING_DATASOURCE_USERNAME: transfer_user
-      SPRING_DATASOURCE_PASSWORD: password321
-      SPRING_REDIS_HOST: redis
+      TRANSFER_DB_URL: jdbc:postgresql://transfer-pg-db:5432/transfer_db
+      TRANSFER_DB_USER: transfer_user
+      TRANSFER_DB_PWD: password321
+      REDIS_HOST: redis
       SPRING_PROFILES_ACTIVE: dev
       SWAGGER_ENABLED: "true"
+      LEDGER_BASE_URL: http://ledger-service:8081
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
       transfer-pg-db:
-        condition: service_started
+        condition: service_healthy
     ports:
       - "8080:8080"
 
