--- a/transfer-service/pom.xml
+++ b/transfer-service/pom.xml
@@ -19,7 +19,7 @@
 		<openapi.version>2.8.5</openapi.version>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<testcontainers.version>1.20.1</testcontainers.version>
-		<jacoco.version>0.8.11</jacoco.version>
+		<jacoco.version>0.8.13</jacoco.version>
 		<reslience4j.version>2.0.2</reslience4j.version>
 		<guava.version>32.1.2-jre</guava.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -121,6 +121,14 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -131,6 +139,8 @@
 				<version>3.11.0</version>
 				<configuration>
 					<release>${java.version}</release>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
