--- a/ledger-service/src/main/resources/application-dev.yaml
+++ b/ledger-service/src/main/resources/application-dev.yaml
@@ -31,6 +31,11 @@ springdoc:
     enabled: ${SWAGGER_ENABLED:false}
   api-docs:
     enabled: ${SWAGGER_ENABLED:false}
+  open-api:
+    info:
+      title: Ledger API
+      description: Accounts and Ledger API documentation
+      version: 1.0.0
 
 server:
   port: 8081
